add repeating background, and margin to body, padding to main

--- a/assignment/stylesheet.css
+++ b/assignment/stylesheet.css
@@ -5,9 +5,12 @@
 
 .main {
     background-color: lightgray;
+    padding: 1em;
 }
 
 .body {
     background-image: url("record.png");
+    background-repeat: repeat;
     background-color: white;
+    margin: 0;
 }
